[project]
name = "pyanova-nano"
version = "0.2.1"
authors = [
  { name="Mitja Muller-Jend", email="mitja.muller-jend+github@gmail.com" },
]
description = "Python API to interact with the Anova Nano."
keywords = ["sous-vide", "anova", "nano", "pyanova", "ble", "bluetooth"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bleak >= 0.19, < 1",
    "bleak-retry-connector >= 3.5, < 1",
    "protobuf >= 4, < 5",
]

[project.optional-dependencies]
dev = ["black", "isort"]
test = [
  "pytest",
  "pytest_asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["pyanova_nano"]

[project.urls]
Homepage = "https://github.com/filmkorn/pyanova-nano"
Issues = "https://github.com/filmkorn/pyanova-nano/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
force_sort_within_sections = true
force_single_line = true
skip = "proto"
