[project]
name = "pyanova-nano"
version = "0.2.3"
authors = [
  { name="Mitja Muller-Jend", email="mitja.muller-jend+github@gmail.com" },
]
description = "Python API to interact with the Anova Nano."
keywords = ["sous-vide", "anova", "nano", "pyanova", "ble", "bluetooth"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bleak >= 0.19, < 1",
    "bleak-retry-connector >= 3.5, < 4",
    "protobuf >= 4, < 7",
]

[project.optional-dependencies]
dev = ["black", "isort"]
test = [
  "pytest",
  "pytest_asyncio",
]
release = [
  "hatch",
]

[tool.hatch.build.targets.wheel]
packages = ["pyanova_nano"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.envs.hatch-test]
default-args = ["--pyargs", "pyanova_nano"]
extra-dependencies = ["pytest", "pytest_asyncio", "pytest_sugar"]

[project.urls]
Homepage = "https://github.com/filmkorn/pyanova-nano"
Issues = "https://github.com/filmkorn/pyanova-nano/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
force_sort_within_sections = true
force_single_line = true
skip = "proto"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
