[project]
name = "pyanova-nano"
version = "0.3.0"
authors = [
  { name="Mitja Muller-Jend", email="mitja.muller-jend+github@gmail.com" },
]
description = "Python API to interact with the Anova Nano."
keywords = ["sous-vide", "anova", "nano", "pyanova", "ble", "bluetooth"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bleak >= 0.19, < 2",
    "bleak-retry-connector >= 3.5, < 5",
    "protobuf >= 4, < 7",
]

[project.optional-dependencies]
dev = ["black", "isort"]
release = [
  "hatch",
]

# Test
[tool.hatch.envs.test]
python = "3.12"
dependencies = [
  "pytest",
  "pytest_cov",
  "pytest_asyncio",
  "pytest_sugar",
]
[tool.hatch.envs.test.scripts]
test = "pytest {args}"
cov-report = [
  "coverage report",
]
cov = [
  "test",
  "cov-report",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12"]

# Build
[tool.hatch.build.targets.wheel]
packages = ["pyanova_nano"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[project.urls]
Homepage = "https://github.com/filmkorn/pyanova-nano"
Issues = "https://github.com/filmkorn/pyanova-nano/issues"

[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
force_sort_within_sections = true
force_single_line = true
skip = "proto"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
